[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/paddle/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/wall/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/goal/Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/start.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/score_board/ScoreBoard.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ready/Ready.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sounds/game_win.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/win_screen/WinScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/crt_layer/CRTLayer.tscn" type="PackedScene" id=11]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Player1Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 250 )
player_id = 1
default_position = Vector2( 50, 250 )

[node name="Player2Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 750, 250 )
player_id = 2
default_position = Vector2( 750, 250 )

[node name="Ball" parent="." groups=[
"ball",
] instance=ExtResource( 3 )]
position = Vector2( 400, 250 )

[node name="TopWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 0 )

[node name="BottomWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 496 )

[node name="Player1Goal" parent="." instance=ExtResource( 5 )]
position = Vector2( -16, 0 )
player_id = 1

[node name="Player2Goal" parent="." instance=ExtResource( 5 )]
position = Vector2( 816, 0 )
player_id = 2

[node name="StartAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Player1Ready" parent="." instance=ExtResource( 8 )]
margin_left = 328.0
margin_top = 96.0
margin_right = 395.0
margin_bottom = 108.0

[node name="Player2Ready" parent="." instance=ExtResource( 8 )]
margin_left = 424.0
margin_top = 96.0
margin_right = 491.0
margin_bottom = 108.0

[node name="GameWinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="WinScreen" parent="." instance=ExtResource( 10 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ScoreBoard" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="CRTLayer" parent="." instance=ExtResource( 11 )]
[connection signal="goal_scored" from="Player1Goal" to="." method="_on_Goal_goal_scored"]
[connection signal="goal_scored" from="Player2Goal" to="." method="_on_Goal_goal_scored"]
[connection signal="match_won" from="CanvasLayer/ScoreBoard" to="." method="_on_ScoreBoard_match_won"]
[connection signal="new_game" from="CanvasLayer/ScoreBoard" to="." method="_on_ScoreBoard_new_game"]
